Correcciones con npm Pruebas Unitarias (npm run test)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "echo ' Comenzando el Build'",
     "build": "nest build",
+    "postbuild": "echo ' Termiando el Build'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
